src/test/ui/box/pin-unsafe-alloc.stderr
error[E0277]: the trait bound `Alloc: PinSafeAllocator` is not satisfied
  --> $DIR/pin-unsafe-alloc.rs:31:32
   |
LL |     let _ = Box::pin_in(value, alloc);
   |             -----------        ^^^^^ expected an implementor of trait `PinSafeAllocator`
   |             |
   |             required by a bound introduced by this call
   |
note: required by a bound in `Box::<T, A>::pin_in`
  --> $SRC_DIR/alloc/src/boxed.rs:LL:COL
   |
LL |         A: ~const Allocator + ~const PinSafeAllocator + ~const Destruct,
   |                               ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Box::<T, A>::pin_in`
help: consider borrowing here
   |
LL |     let _ = Box::pin_in(value, &alloc);
   |                                +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
